force-app/main/default/objects/Lead/fields/Secondary_Member_Title__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Title__c</fullName>
    <label>Secondary Member Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Rev</fullName>
            </value>
            <value>
                <fullName>Sir</fullName>
            </value>
            <value>
                <fullName>Capt</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Sgt</fullName>
            </value>
            <value>
                <fullName>Corp</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
            <value>
                <fullName>Cllr</fullName>
            </value>
            <value>
                <fullName>Rt Hon</fullName>
            </value>
            <value>
                <fullName>Lady</fullName>
            </value>
            <value>
                <fullName>Lord</fullName>
            </value>
            <value>
                <fullName>Dame</fullName>
            </value>
            <value>
                <fullName>Duke</fullName>
            </value>
            <value>
                <fullName>Duchess</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Countess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>