force-app/main/default/objects/Lead/fields/sections__c.field-meta.xml
<CustomField>
    <fullName>sections__c</fullName>
    <label>Sections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>