force-app/main/default/objects/Lead/fields/SM_Age_Concession__c.field-meta.xml
<CustomField>
    <fullName>SM_Age_Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SM Age Concession</label>
    <type>Checkbox</type>
</CustomField>