force-app/main/default/objects/Lead/fields/Staff_membership_for__c.field-meta.xml
<CustomField>
    <fullName>Staff_membership_for__c</fullName>
    <label>Staff membership for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>