force-app/main/default/objects/Lead/fields/Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code__c</fullName>
    <label>Voucher Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>