force-app/main/default/objects/Lead/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width (m)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>