force-app/main/default/objects/Lead/validationRules/Cards_arent_allowed_on_MembershipType.validationRule-meta.xml
<ValidationRule>
    <fullName>Cards_arent_allowed_on_MembershipType</fullName>
    <active>false</active>
    <description>Used to check if debit/credit cards aren&apos;t allowed with the current membership type</description>
    <errorConditionFormula>AND(
 Membership_Type__r.Card_Payment_Allowed__c = FALSE,
 ISPICKVAL( Payment_Method__c, &apos;Debit/Credit Card&apos;))</errorConditionFormula>
    <errorMessage>You’re trying to add a debit/credit card as a payment method but its not allowed with the current membership type selected.</errorMessage>
</ValidationRule>