force-app/main/default/objects/Lead/validationRules/Children_arent_allowed_on_MembershipType.validationRule-meta.xml
<ValidationRule>
    <fullName>Children_arent_allowed_on_MembershipType</fullName>
    <active>false</active>
    <description>Used to check if Children aren&apos;t allowed with the current membership type</description>
    <errorConditionFormula>AND(
Membership_Type__r.Children_Allowed__c =FALSE,
NOT(ISBLANK(TEXT(Number_of_Children__c))),
NOT(ISPICKVAL(Number_of_Children__c, &apos;0&apos;)))</errorConditionFormula>
    <errorDisplayField>Number_of_Children__c</errorDisplayField>
    <errorMessage>Children cannot be added to the selected membership type.</errorMessage>
</ValidationRule>