force-app/main/default/objects/Lead/validationRules/Member_over_17.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_over_17</fullName>
    <active>false</active>
    <description>Prevent a member being assigned the membership type of Youth if they&apos;re older than 17</description>
    <errorConditionFormula>AND(
Membership_Type__r.Name = &apos;Youth - Digital&apos;,  
NOT(ISBLANK(Lead_Member_Date_of_Birth__c )),

OR(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c)&gt; 18,

AND(
 YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c)= 18,
 MONTH(TODAY())&gt; MONTH (Lead_Member_Date_of_Birth__c)
),

AND(
 YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c)= 18,
 MONTH(TODAY())= MONTH (Lead_Member_Date_of_Birth__c),
 DAY(TODAY())&gt;= DAY(Lead_Member_Date_of_Birth__c)
)
)
)</errorConditionFormula>
    <errorMessage>Cannot assign a Membership Type of &apos;Youth&apos; to a Member who is older than 17</errorMessage>
</ValidationRule>