force-app/main/default/objects/Lead/validationRules/Partner_checkbox_not_ticked.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_checkbox_not_ticked</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
hasPartner__c = FALSE,
OR(
NOT(ISBLANK( Secondary_Member_First_Name__c )),
NOT(ISBLANK( Secondary_Member_Surname__c )),
NOT(ISBLANK( TEXT(Secondary_Member_Title__c )))
)
)</errorConditionFormula>
    <errorMessage>Please tick the Partner checkbox to progress</errorMessage>
</ValidationRule>