force-app/main/default/objects/Lead/validationRules/Young_Camper_Max_Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Young_Camper_Max_Age_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Membership_Type__r.Name = &apos;Young Camper&apos;,
NOT(ISBLANK(Lead_Member_Date_of_Birth__c )),

OR(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c) &gt; 25,

AND(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c) = 25,
MONTH(TODAY()) &gt; MONTH (Lead_Member_Date_of_Birth__c)
),

AND(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c) = 25,
MONTH(TODAY()) = MONTH (Lead_Member_Date_of_Birth__c),
DAY(TODAY()) &lt;= DAY(Lead_Member_Date_of_Birth__c)
)
)
)</errorConditionFormula>
    <errorMessage>Cannot assign a Membership Type of &apos;Young Camper&apos; to a Member who is older than 25!</errorMessage>
</ValidationRule>