force-app/main/default/objects/Lead/validationRules/Young_Camper_Min_Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Young_Camper_Min_Age_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Membership_Type__r.Name = &apos;Young Camper&apos;,
NOT(ISBLANK(Lead_Member_Date_of_Birth__c )),

OR(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c) &lt; 18,

AND(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c) = 18,
MONTH(TODAY()) &lt; MONTH (Lead_Member_Date_of_Birth__c)
),

AND(
YEAR(TODAY()) - YEAR(Lead_Member_Date_of_Birth__c) = 18,
MONTH(TODAY()) = MONTH (Lead_Member_Date_of_Birth__c),
DAY(TODAY()) &gt; DAY(Lead_Member_Date_of_Birth__c)
)

)

)</errorConditionFormula>
    <errorMessage>Cannot assign a Membership Type of &apos;Young Camper&apos; to a Member who is younger than 18!</errorMessage>
</ValidationRule>