force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Lead_Step__c</columns>
    <columns>Max_LeadStep__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Sort_Code__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.CONVERTED</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/1/2023 12:00 AM</value>
    </filters>
    <label>All Incomplete Memberships</label>
</ListView>